// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ui-button> renders button with icon 1`] = `
<button
  class="mdc-button"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  <i
    aria-hidden="true"
    class="material-icons mdc-button__icon"
  >
    favorite
  </i>
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;

exports[`<ui-button> renders button with scoped slots 1`] = `
<button
  class="mdc-button"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  
  <i
    class="mdc-button__icon"
  >
    mdc-button__icon
  </i>
  
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;

exports[`<ui-button> renders default button 1`] = `
<button
  class="mdc-button"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  <!--v-if-->
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;

exports[`<ui-button> renders outlined button 1`] = `
<button
  class="mdc-button mdc-button--outlined"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  <!--v-if-->
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;

exports[`<ui-button> renders raised button 1`] = `
<button
  class="mdc-button mdc-button--raised"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  <!--v-if-->
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;

exports[`<ui-button> renders unelevated button 1`] = `
<button
  class="mdc-button mdc-button--unelevated"
  type="button"
>
  <div
    class="mdc-button__ripple"
  />
  <!-- Icon (optional) -->
  
  <!--v-if-->
  
  <!-- Text label -->
  <span
    class="mdc-button__label"
  >
    
    
  </span>
  <!-- Icon (optional) -->
  
  
</button>
`;
